# my-website

./: .env.dev  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.MD  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml
admin/: Dockerfile  package.json
app/: globals.css  layout.tsx  page.tsx
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_contact_messages_table.py  0002_add_read_at_to_contact_messages.py  0003_add_indexes_to_contact_messages.py
backend/src/app/: config.py  database.py  main.py
backend/src/app/middleware/: rate_limiter.py
backend/src/app/models/: contact.py
backend/src/app/routers/: admin.py  contact.py  health.py
backend/src/app/schemas/: admin.py  contact.py  health.py
backend/src/app/services/: auth.py  email.py
components/: GlowButton.tsx
frontend/: .dockerignore  Dockerfile  find-icons.mjs  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: about-card.tsx  bottom-dock.tsx  command-palette.tsx  not-found-content.tsx  page-transition.tsx  sound-provider.tsx
nginx/: nginx.conf
nginx/conf.d/: app.conf
scripts/: init-letsencrypt.sh
src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
src/components/: custom-cursor.tsx  footer.tsx  globe.tsx  navigation-menu.tsx  project-card.tsx
(+109 files in other folders)
